--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vitalya-life-pixi",
   "version": "0.1.0",
   "private": true,
-  "dev-dependencies": {
+  "devDependencies": {
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
@@ -53,6 +53,7 @@
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
     "webpack": "4.41.0",
+    "webpack-bundle-analyzer": "^3.5.2",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
     "workbox-webpack-plugin": "4.3.1"
@@ -129,5 +130,10 @@
     "presets": [
       "react-app"
     ]
+  },
+  "dependencies": {
+    "node-sass": "^4.12.0",
+    "pixi.js": "^5.1.5",
+    "reset-css": "^4.0.1"
   }
 }
