--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "webpack-manifest-plugin": "2.1.1",
     "workbox-webpack-plugin": "4.3.1"
   },
+  "homepage": "https://rkuzovlev.github.io/vitalya_life_game/",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
